# nfd-rs

./: Cargo.toml  README.md  build.rs
examples/: example.rs  open_multiple.rs
nfd/src/: nfd_cocoa.m  nfd_gtk.c
src/: ffi.rs  lib.rs
