[package]
name = "nfd"
version = "0.0.1"
authors = ["Saurav Sachidanand <sauravsachidanand@gmail.com>"]

license = "MIT"
repository = "https://www.github.com/saurvs/nfd-rs"

description = "Rust bindings to nativefiledialog"
keywords = ["file", "dialog", "ui"]

build = "build.rs"

[dependencies]
libc = "0.2.7"
