[package]
name = "nfd"
version = "0.0.2"
authors = ["Saurav Sachidanand <sauravsachidanand@gmail.com>", "Daniel Collin <daniel@collin>"]

license = "MIT"
repository = "https://www.github.com/saurvs/nfd-rs"

description = "Rust bindings to nativefiledialog"
keywords = ["file", "dialog", "ui"]

build = "build.rs"

[build-dependencies]
gcc = "0.3"

